# AIOD-rest-api

./: .env  .gitignore  .pre-commit-config.yaml  DevDockerfile  Dockerfile  README.md  compose-dev.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: container-test.yml  docker-image.yml  dockerized-tests.yml  pytest-tests.yml
authentication/: Dockerfile  README.md  realm-export.json  run_keycloak.sh
keycloak/: realm-export.json
media/: GetDatasetUML.drawio
nginx/: default.conf
nginx/conf.d/: default.conf  nginx-selfsigned.crt  nginx-selfsigned.key
scripts/: run_apiserver.sh  run_apiserver_dev.sh  run_apiserver_devcontainer.sh  run_keycloak.sh  run_mysql_server.sh
src/: .env  README.md  authentication.py  config.py  config.toml  main.py  node_names.py  platform_names.py  schemas.py  serialization.py  test-authz-config.json
src/connectors/: __init__.py  node_names.py  resource_with_relations.py
src/connectors/abstract/: dataset_connector.py  publication_connector.py  resource_connector.py
src/connectors/example/: example_case_study_connector.py  example_connector.py  example_dataset_connector.py  example_educational_resources_connector.py  example_event_connector.py  example_news_connector.py  example_presentation_connector.py  example_project_connector.py  example_publication_connector.py  utils.py
src/connectors/huggingface/: huggingface_dataset_connector.py
src/connectors/openml/: openml_dataset_connector.py
src/connectors/zenodo/: zenodo_connector.py  zenodo_dataset_connector.py  zenodo_publication_connector.py
src/converters/: __init__.py  abstract_converter.py  conversion_helpers.py  dataset_converter.py  educational_resource_converter.py  event_converter.py  news_converter.py  organisation_converter.py  organization_converter.py  project_converter.py  publication_converter.py
src/converters/orm_converters/: case_study_converter.py  dataset_converter.py  educational_resource_converter.py  event_converter.py  news_converter.py  organisation_converter.py  orm_converter.py  presentation_converter.py  project_converter.py  publication_converter.py
src/converters/schema/: dcat.py  schema_dot_org.py
src/converters/schema_converters/: __init__.py  schema_converter.py
src/database/: models.py  serialization.py  setup.py
src/database/model/: __init__.py  agent.py  agent_table.py  ai_asset.py  ai_asset_table.py  ai_resource.py  base.py  case_study.py  case_study_relationships.py  event.py  (+21 more)
src/routers/: __init__.py  abstract_router.py  case_study_router.py  computational_resource_router.py  dataset_router.py  dataset_router_v0.py  educational_resource_router.py  educational_resource_router_v0.py  event_router.py  event_router_v0.py  news_router.py  news_router_v0.py  organisation_router.py  organization_router.py  platform_router.py  presentation_router.py  project_router.py  project_router_v0.py  publication_router.py  publication_router_v0.py  resource_router.py  upload_router_huggingface.py
src/tests/: .env  conftest.py  test_authentication.py  test_delete_datasets.py  test_delete_publications.py  test_get_dataset.py  test_get_datasets.py  test_get_news.py  test_get_nodes.py  test_get_organisation.py  test_get_organisations.py  test_get_organization.py  test_get_organizations.py  test_get_presentations.py  test_get_projects.py  test_get_publication.py  test_get_publication_zenodo.py  test_get_publications.py  test_get_publications_of_dataset.py  test_get_publications_zenodo.py  test_post_datasets.py  test_post_educational_resource.py  test_post_news.py  test_post_organisation.py  test_post_organization.py  test_post_publications.py  test_put_datasets.py  test_put_news.py  test_put_publication.py
src/uploader/: hugging_face_uploader.py  utils.py
(+181 files in other folders)
