[project]
name = "ai4eu_server_demo"
description = "A containerized demo application for AI on demand (previously AI4EU) "
version = "0.3.20230501"
authors = [

    { name = "Antonis Ganios"},
    { name = "Íñigo Aréjula Aísa"},
    { name = "Jos van der Velde", email = "j.d.v.d.velde@tue.nl"},
    { name = "Pieter Gijsbers", email = "p.gijsbers@tue.nl"},
    { name = "Giannis Mouchakis"},
]
dependencies = [
    "urllib3==1.26.15",
    "sqlalchemy==2.0.0b4",
    "bibtexparser",
    "datasets",
    "fastapi",
    "uvicorn",
    "requests",
    "mysqlclient",
    "oic",
    "python-keycloak",
    "python-dotenv",
    "pydantic",
    "pydantic_schemaorg",
    "python-dateutil",
    "httpx"
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "types-python-dateutil",
    "pytest",
    "pytest-xdist",
    "pre-commit",
    "responses",
    "starlette"
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning"
]
